Fixes for misalignment of sort labels in modals

--- a/platforms/common/scss/admin/particles/_filepicker.scss
+++ b/platforms/common/scss/admin/particles/_filepicker.scss
@@ -258,7 +258,7 @@
             margin-top: 0;
             li {
                 display: block;
-                padding: 6px 4px;
+                padding: 4px;
 
                 > span:not(.g-file-name) {
                     color: #aaa;
@@ -270,7 +270,7 @@
                 }
 
                 .g-file-name {
-                    width: 60%;
+                    width: 50%;
                 }
 
                 .g-file-size {
